--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -1,24 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item
-        android:id="@+id/home_page"
-        android:icon="@drawable/ic_home_black_24dp"
-        android:title="@string/title_home_page" />
+    <group android:checkableBehavior="single">
+        <item
+            android:id="@+id/home_page"
+            android:icon="@drawable/ic_home_black_24dp"
+            android:title="@string/title_home_page" />
 
-    <item
-        android:id="@+id/navigation_game"
-        android:icon="@drawable/ic_dashboard_black_24dp"
-        android:title="@string/title_game" />
+        <item
+            android:id="@+id/navigation_game"
+            android:icon="@drawable/ic_dashboard_black_24dp"
+            android:title="@string/title_game" />
 
-    <item
-        android:id="@+id/navigation_circle"
-        android:icon="@drawable/ic_notifications_black_24dp"
-        android:title="@string/title_circle" />
+        <item
+            android:id="@+id/navigation_circle"
+            android:icon="@drawable/ic_notifications_black_24dp"
+            android:title="@string/title_circle" />
 
-    <item
-        android:id="@+id/navigation_me"
-        android:icon="@drawable/ic_home_black_24dp"
-        android:title="@string/title_me" />
+        <item
+            android:id="@+id/navigation_me"
+            android:icon="@drawable/ic_home_black_24dp"
+            android:title="@string/title_me" />
+    </group>
 
 </menu>
