--- a/app/src/main/res/layout/activity_ps.xml
+++ b/app/src/main/res/layout/activity_ps.xml
@@ -11,8 +11,8 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_marginBottom="20dp"
-        android:layout_marginEnd="10dp"
-        android:src="@drawable/ic_launcher_background"
+        android:layout_marginRight="10dp"
+        app:srcCompat="@drawable/ic_dashboard_black_24dp"
         app:elevation="5dp"
         app:fabSize="normal" />
 
@@ -22,8 +22,8 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_marginBottom="20dp"
-        android:layout_marginEnd="10dp"
-        android:src="@drawable/ic_launcher_foreground"
+        android:layout_marginRight="10dp"
+        app:srcCompat="@drawable/ic_home_black_24dp"
         app:elevation="5dp"
         app:fabSize="normal"/>
 
@@ -33,8 +33,8 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_marginBottom="20dp"
-        android:layout_marginEnd="10dp"
-        android:src="@color/colorPrimaryDark"
+        android:layout_marginRight="10dp"
+        app:srcCompat="@drawable/ic_launcher_background"
         app:elevation="5dp"
         app:fabSize="normal"/>
 
@@ -44,8 +44,8 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_marginBottom="20dp"
-        android:layout_marginEnd="10dp"
-        android:src="@drawable/ic_home_black_24dp"
+        android:layout_marginRight="10dp"
+        app:srcCompat="@drawable/ic_launcher_foreground"
         app:elevation="5dp"
         app:fabSize="normal"/>
 </FrameLayout>
