--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -3,16 +3,17 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/view_pager"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity"
+    app:layout_behavior="@string/appbar_scrolling_view_behavior"
+    tools:context=".MainActivity$PlaceholderFragment"
     tools:showIn="@layout/app_bar_main">
 
     <TextView
-        android:id="@+id/text_show"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/title_home_page"
-        android:gravity="center"/>
+        android:id="@+id/text_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/title_home_page"/>
 
 </android.support.constraint.ConstraintLayout>
