--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -16,4 +16,12 @@
         android:layout_height="wrap_content"
         android:text="@string/title_home_page"/>
 
-</android.support.constraint.ConstraintLayout>
+    <Button
+        android:id="@+id/intent_ps"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Intent Pa"
+        android:layout_below="@id/text_view"
+        android:textAllCaps="false"/>
+
+</RelativeLayout>
