修改滑动菜单、添加登录界面

--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -14,7 +14,7 @@
         android:id="@+id/text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/title_home_page"/>
+        android:text="@string/title_home"/>
 
     <Button
         android:id="@+id/intent_ps"
@@ -22,6 +22,14 @@
         android:layout_height="wrap_content"
         android:text="Intent Pa"
         android:layout_below="@id/text_view"
+        android:textAllCaps="false"/>
+
+    <Button
+        android:id="@+id/intent_login"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Intent Login"
+        android:layout_below="@id/intent_ps"
         android:textAllCaps="false"/>
 
 </RelativeLayout>
