--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -67,6 +67,13 @@
         layout="@layout/content_main"
         app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recycler_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
+
+
     <FrameLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -119,5 +126,6 @@
             app:elevation="5dp"
             app:fabSize="normal"/>
     </FrameLayout>
+
 
 </android.support.design.widget.CoordinatorLayout>
