--- a/app/src/main/res/layout/game_item_strategycontent.xml
+++ b/app/src/main/res/layout/game_item_strategycontent.xml
@@ -23,7 +23,7 @@
         android:text="@string/game_strategy"/>
 
     <TextView
-        android:id="@+id/game_item_comments_section"
+        android:id="@+id/game_item_picture"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@id/game_item_strategy"
