--- a/app/src/main/res/layout/game_item_strategycontent.xml
+++ b/app/src/main/res/layout/game_item_strategycontent.xml
@@ -18,14 +18,17 @@
     <TextView
         android:id="@+id/game_item_strategy"
         android:layout_width="match_parent"
-        android:layout_height="100dp"
+        android:layout_height="wrap_content"
         android:layout_below="@id/game_item_image"
-        android:text="@string/game_strategy"/>
+        android:text="@string/game_strategy"
+        android:lines="2"/>
 
     <TextView
         android:id="@+id/game_item_picture"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@id/game_item_strategy"
-        android:text="@string/game_item_picture"/>
+        android:text="@string/game_item_picture" />
+
+
 </RelativeLayout>
