--- a/app/src/main/res/layout/game_item_strategycontent.xml
+++ b/app/src/main/res/layout/game_item_strategycontent.xml
@@ -1,34 +1,76 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/game_item_name"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="match_parent">
+
+        <TextView
+            android:id="@+id/game_item_name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
 
 
-    <ImageView
-        android:id="@+id/game_item_image"
-        android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:layout_below="@id/game_item_name" />
+        <ImageView
+            android:id="@+id/game_item_image"
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            android:layout_below="@id/game_item_name" />
 
 
-    <TextView
-        android:id="@+id/game_item_strategy"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/game_item_image"
-        android:text="@string/game_strategy"
-        android:lines="2"/>
+        <TextView
+            android:id="@+id/game_item_strategy"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/game_item_image"
+            android:text="@string/game_strategy"
+            android:lines="2"/>
 
-    <TextView
-        android:id="@+id/game_item_picture"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@id/game_item_strategy"
-        android:text="@string/game_item_picture" />
+        <TextView
+            android:id="@+id/game_item_image_strategy"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_below="@id/game_item_strategy"
+            android:text="游戏图片"/>
 
+        <HorizontalScrollView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/game_item_image_strategy">
 
-</RelativeLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/picture1"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@drawable/cyberpunk2077_game"/>
+
+                <ImageView
+                    android:id="@+id/picture2"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@drawable/cyberpunk2077_game"/>
+
+                <ImageView
+                    android:id="@+id/picture3"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@drawable/cyberpunk2077_game"/>
+
+                <ImageView
+                    android:id="@+id/picture4"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="@drawable/cyberpunk2077_game"/>
+            </LinearLayout>
+
+        </HorizontalScrollView>
+
+    </RelativeLayout>
+
+</ScrollView>
