--- a/app/src/main/res/layout/item_evaluation.xml
+++ b/app/src/main/res/layout/item_evaluation.xml
@@ -1,18 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_margin="5dp">
+<android.support.v7.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="horizontal"
+    android:layout_width="400dp"
+    android:layout_height="400dp"
+    android:layout_marginTop="150dp"
+    android:layout_marginLeft="30dp"
+    android:layout_marginRight="30dp">
 
-    <TextView
-        android:id="@+id/evaluation_Title"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="match_parent"
+        android:orientation="horizontal">
 
-    <ImageView
-        android:id="@+id/evaluation_image"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        <TextView
+            android:id="@+id/evaluation_name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
 
-</LinearLayout>
+        <ImageView
+            android:id="@+id/evaluation_image"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/evaluation_name"/>
+
+    </RelativeLayout>
+
+</android.support.v7.widget.CardView>
