--- a/app/src/main/res/layout/item_video.xml
+++ b/app/src/main/res/layout/item_video.xml
@@ -1,18 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-android:orientation="vertical"
-android:layout_width="match_parent"
-android:layout_height="wrap_content"
-android:layout_margin="5dp">
-
-<TextView
-    android:id="@+id/video_Title"
+    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content" />
+    android:layout_height="wrap_content"
+    android:layout_margin="5dp">
 
-<ImageView
-    android:id="@+id/video_image"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content" />
+    <TextView
+       android:id="@+id/video_Title"
+       android:layout_width="match_parent"
+       android:layout_height="wrap_content" />
+
+
+    <VideoView
+        android:id="@+id/video_play"
+        android:layout_width="match_parent"
+        android:layout_height="200dp" />
+
 
 </LinearLayout>
